--- a/Aufgabe 0/index.html
+++ b/Aufgabe 0/index.html
@@ -1,1 +1,26 @@
-EIA2
+<!DOCTYPE html>
+<html lang="de">
+<head>
+<meta charset="UTF-8">
+<title>Aufgabe 0 - Mario Eigeldinger</title>
+<script src="js/main.js"></script>
+</head>
+    
+<body>
+<header>
+</header>
+
+<main>
+</main>
+   
+<footer>  
+</footer>
+<!-- 
+Aufgabe: Aufgabe 0, 
+Name: Mario Eigeldinger
+Matrikel: 261167
+Datum: 22.03.2019, 
+Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde nicht kopiert und auch nicht diktiert.
+-->
+</body>
+</html>
