--- a/Aufgabe0/index.html
+++ b/Aufgabe0/index.html
@@ -5,13 +5,23 @@
 <title>Aufgabe 0 - Mario Eigeldinger</title>
 <script src="js/main.js"></script>
 </head>
-    
+<style>
+#inhalt {
+font-family: Georgia, 'Times New Roman', Times, serif;
+font-size: 3em;
+padding: 1em;
+color: white;
+text-align: center;
+background-color: crimson;
+} 
+</style>
+
 <body>
 <header>
 </header>
 
-<main>
-<h1>test</h1>
+<main id="inhalt">
+
 </main>
    
 <footer>
