--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -9,11 +9,11 @@
 			font-family: arial;
 			font-size: small;
 			background-color: white;
-			text-align:center;
+			text-align: center;
 		}
 
 		button {
-			background-color:darkslateblue;
+			background-color: darkslateblue;
 			border: 0px;
 			padding: 0.5em;
 			margin: 0.5em;
@@ -25,27 +25,31 @@
 			text-decoration-line: none;
 			font-size: 0.8em;
 		}
+
 		a {
-			color:darkslateblue;
+			color: darkslateblue;
 			font-weight: bold;
 			text-decoration: none;
 			text-transform: uppercase;
 		}
+
 		a:hover {
 			color: rgb(0, 255, 98)
 		}
 
 		p {
-			padding: 0em; margin: 0em;
-			color:darkslateblue;
+			padding: 0em;
+			margin: 0em;
+			color: darkslateblue;
 			text-align: center;
 		}
+
 		h1 {
 			text-align: center;
 			margin-block-end: 0em;
 		}
 
-		h5{ 
+		h5 {
 			font-style: italic;
 			font-weight: lighter;
 			margin-top: 0em;
@@ -63,14 +67,16 @@
 			<h5>Medienkonzeption B.A., 4. Semester</h5>
 		</div>
 		<h2>
-		Aufgaben:
+			Aufgaben:
 		</h2>
 		<button>
-		<a href="" target="_blank">Aufgabe 0, 15.04.2020</a>
+			<a href="" target="_blank">Aufgabe 0, 15.04.2020</a>
 		</button><br>
 		<hr>
 		<h2>Steckbrief EIA 2:</h2>
-		<p>Alter: 23 Jahre <br>Wohnort: Niedereschach <br> Hobbys: Musik, Grafikdesign, Bildbearbeitung, Sport <br> Ausbildung: Mediengestalter Digital und Print (2015-2018) <br> Abitur: 2015, Hoptbühl Gymnasium in Villingen-Schwenningen
+		<p>Alter: 23 Jahre <br>Wohnort: Niedereschach <br> Hobbys: Musik, Grafikdesign, Bildbearbeitung, Sport <br>
+			Ausbildung: Mediengestalter Digital und Print (2015-2018) <br> Abitur: 2015, Hoptbühl Gymnasium in
+			Villingen-Schwenningen
 		</p>
 		<br>
 		<a href="https://majoo44.github.io/" target="_blank">Meine Webseite</a>
