--- a/Aufgabe01/index.html
+++ b/Aufgabe01/index.html
@@ -1,37 +1,26 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-<meta charset="UTF-8">
-<title>Aufgabe 0 - Mario Eigeldinger</title>
-<script src="js/main.js"></script>
-</head>
-<style>
-#inhalt {
-font-family: Georgia, 'Times New Roman', Times, serif;
-font-size: 3em;
-padding: 1em;
-color: white;
-text-align: center;
-background-color: crimson;
-} 
-</style>
-
-<body>
-<header>
-</header>
-
-<main id="inhalt">
-
-</main>
-   
-<footer>
-</footer>
 <!-- 
-Aufgabe: Aufgabe 0, 
+Aufgabe: Aufgabe 1
 Name: Mario Eigeldinger
 Matrikel: 261167
-Datum: 22.03.2019, 
-Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe. Er wurde nicht kopiert und auch nicht diktiert.
+Datum: 24.04.2020
+Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe.
 -->
+<!DOCTYPE html>
+<html lang="de">
+
+<head>
+    <meta charset="UTF-8">
+    <title>Aufgabe 1 - Mario Eigeldinger</title>
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+</head>
+<header>
+    <h1>Aufgabe 1 - Mario Eigeldinger</h1>
+    <h4>Medienkonzeption B.A., 4. Semester</h4>
+</header>
+<body>
+    <main>
+    <script src="js/boxes.js"></script>
+    </main>
 </body>
+
 </html>
