--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -70,8 +70,15 @@
 			Aufgaben:
 		</h2>
 		<button>
-			<a href="" target="_blank">Aufgabe 1, 23.04.2020</a>
-		</button><br>
+		<a href="https://majoo44.github.io/EIA2/Aufgabe01/index.html" target="_blank">Aufgabe 1 Code, 24.04.2020</a>
+		</button>
+		<button>
+		<a href="https://majoo44.github.io/EIA2/Aufgabe01/Tracetable&Aktivitätsdiagramm.pdf" target="_blank">Aufgabe 1 Tracetable&Aktivitätsdiagramm, 24.04.2020</a>
+		</button>		
+		<br> 
+		<button>
+		<a href="" target="_blank">Aufgabe 2, Platzhalter</a>
+		</button>
 		<hr>
 		<h2>Steckbrief EIA 2:</h2>
 		<p>Alter: 23 Jahre <br>Wohnort: Niedereschach <br> Hobbys: Musik, Grafikdesign, Bildbearbeitung, Sport <br>
