--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -16,14 +16,14 @@
 			background-color: darkslateblue;
 			border: 0px;
 			padding: 0.5em;
-			margin: 0.5em;
+			margin: 0.25em;
 		}
 
 		button a {
 			color: white;
 			text-transform: uppercase;
 			text-decoration-line: none;
-			font-size: 0.8em;
+			font-size: 0.7em;
 		}
 
 		a {
@@ -73,7 +73,7 @@
 		<a href="https://majoo44.github.io/EIA2/Aufgabe01/index.html" target="_blank">Aufgabe 1 Code, 24.04.2020</a>
 		</button>
 		<button>
-		<a href="https://majoo44.github.io/EIA2/Aufgabe01/Tracetable&Aktivitätsdiagramm.pdf" target="_blank">Aufgabe 1 Tracetable&Aktivitätsdiagramm, 24.04.2020</a>
+		<a href="https://majoo44.github.io/EIA2/Aufgabe01/Tracetable&Aktivitätsdiagramm.pdf" target="_blank">Aufgabe 1 TT&AD, 24.04.2020</a>
 		</button>		
 		<br> 
 		<button>
