Steckbrief-Aufgabe 1-Final

--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -49,10 +49,20 @@
 			margin-block-end: 0em;
 		}
 
+		h2 {
+			margin: 0.5em;
+		}
+
 		h5 {
 			font-style: italic;
 			font-weight: lighter;
 			margin-top: 0em;
+		}
+
+		h6 {
+			font-weight: lighter;
+			margin: 0em;
+			margin-bottom: 0.75em;
 		}
 	</style>
 </head>
@@ -69,15 +79,17 @@
 		<h2>
 			Aufgaben:
 		</h2>
+		<h6><a href="https://github.com/Majoo44/EIA2" target="_blank">Repository</a></h6>
 		<button>
-		<a href="https://majoo44.github.io/EIA2/Aufgabe01/index.html" target="_blank">Aufgabe 1 Code, 24.04.2020</a>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe01/index.html" target="_blank">Aufgabe 1 Code, 24.04.2020</a>
 		</button>
 		<button>
-		<a href="https://majoo44.github.io/EIA2/Aufgabe01/Tracetable&Aktivitätsdiagramm.pdf" target="_blank">Aufgabe 1 TT&AD, 24.04.2020</a>
-		</button>		
-		<br> 
+			<a href="https://majoo44.github.io/EIA2/Aufgabe01/img/tracetable_und_aktivitaetsdiagramm.pdf"
+				target="_blank">Aufgabe 1 TT&AD, 24.04.2020</a>
+		</button>
+		<br>
 		<button>
-		<a href="" target="_blank">Aufgabe 2, Platzhalter</a>
+			<a href="" target="_blank">Aufgabe 2, Platzhalter</a>
 		</button>
 		<hr>
 		<h2>Steckbrief EIA 2:</h2>
