--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -79,6 +79,14 @@
 		<h2>
 			Aufgaben:
 		</h2>
+		<button>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe02/index.htm" target="_blank">Aufgabe 2 Code, 02.05.2020</a>
+		</button>
+		<button>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe01/img/"
+				target="_blank">Aufgabe 2 PDF, 02.05.2020</a>
+		</button>
+		<br>
 		<h6><a href="https://github.com/Majoo44/EIA2" target="_blank">Repository</a></h6>
 		<button>
 			<a href="https://majoo44.github.io/EIA2/Aufgabe01/index.html" target="_blank">Aufgabe 1 Code, 24.04.2020</a>
@@ -87,10 +95,7 @@
 			<a href="https://majoo44.github.io/EIA2/Aufgabe01/img/tracetable_und_aktivitaetsdiagramm.pdf"
 				target="_blank">Aufgabe 1 TT&AD, 24.04.2020</a>
 		</button>
-		<br>
-		<button>
-			<a href="" target="_blank">Aufgabe 2, Platzhalter</a>
-		</button>
+	
 		<hr>
 		<h2>Steckbrief EIA 2:</h2>
 		<p>Alter: 23 Jahre <br>Wohnort: Niedereschach <br> Hobbys: Musik, Grafikdesign, Bildbearbeitung, Sport <br>
