--- a/Aufgabe02/index.html
+++ b/Aufgabe02/index.html
@@ -3,23 +3,38 @@ Aufgabe: Aufgabe 2
 Name: Mario Eigeldinger
 Matrikel: 261167
 Datum: 02.05.2020
-Hiermit versichere ich, dass ich diesen Code selbst vom Repository kopiert habe.
+Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe.
 -->
 <!DOCTYPE html>
 <html lang="de">
 
 <head>
     <meta charset="UTF-8">
-    <title>Aufgabe 1 - Mario Eigeldinger</title>
+    <title>Aufgabe 2 - Mario Eigeldinger</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <header>
-    <h1>Aufgabe 1 - Mario Eigeldinger</h1>
-    <h4>Medienkonzeption B.A., 4. Semester</h4>
+    <h1>Sequenzmemory</h1>
+    <h3>Spielerläuterung:</h3>
+    <p>Herzlich Willkommen im Sequenzmemory. Zunächst wird ein Wort abgebildet, was danach in durchmischter Reihenfolge
+        für eine bestimmte Zeit lang, die du selbst auswählen kannst, angezeigt wird. Danach wird das durchmischte Wort
+        verdeckt. Deine Aufgabe ist es, das korrekte Ausgangswort in der richtigen Reihenfolge aufzudecken. </p>
+    <p>
+        Du kannst ein eigenes Wort eintippen (Enter) oder eins von 10 vorgegebenen Worten wählen (Choose).
+    </p>
+    <div>
+    <button>
+       <a href="">Enter Sequence</a> 
+    </button>
+    <button>
+        <a href="">Choose Sequence</a> 
+    </button>
+</div>
 </header>
+
 <body>
     <main>
-    <script src="js/boxes.js"></script>
+        <script src="js/sequenzmemory.js"></script>
     </main>
 </body>
 
