--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -84,7 +84,7 @@
 			<a href="https://majoo44.github.io/EIA2/Aufgabe02/index.htm" target="_blank">Aufgabe 2 Code, 02.05.2020</a>
 		</button>
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Aufgabe01/img/"
+			<a href="https://majoo44.github.io/EIA2/Aufgabe01/img/aufgabe2_sequenzmemory_UCD_UI_AD.pdf"
 				target="_blank">Aufgabe 2 PDF, 02.05.2020</a>
 		</button>
 		<br>
@@ -102,8 +102,6 @@
 			Ausbildung: Mediengestalter Digital und Print (2015-2018) <br> Abitur: 2015, Hoptbühl Gymnasium in
 			Villingen-Schwenningen
 		</p>
-		<br>
-		<a href="https://majoo44.github.io/" target="_blank">Meine Webseite</a>
 		<br>
 		<br>
 		<hr>
