--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -81,10 +81,10 @@
 		</h2>
 		<h6><a href="https://github.com/Majoo44/EIA2" target="_blank">Repository</a></h6>
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Aufgabe02/index.htm" target="_blank">Aufgabe 2 Code, 02.05.2020</a>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe02/index.html" target="_blank">Aufgabe 2 Code, 02.05.2020</a>
 		</button>
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Aufgabe01/img/aufgabe2_sequenzmemory_UCD_UI_AD.pdf"
+			<a href="https://majoo44.github.io/EIA2/Aufgabe02/img/aufgabe2_sequenzmemory_UCD_UI_AD.pdf"
 				target="_blank">Aufgabe 2 PDF, 02.05.2020</a>
 		</button>
 		<br>
