Aufgabe 03 erster Commit zum Spaß

--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -81,6 +81,14 @@
 		</h2>
 		<h6><a href="https://github.com/Majoo44/EIA2" target="_blank">Repository</a></h6>
 		<button>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe03/index.html" target="_blank">Aufgabe 3 Code, 09.05.2020</a>
+		</button>
+		<button>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe03/img/"
+				target="_blank">Aufgabe 3 PDF, 09.05.2020</a>
+		</button>
+		<br>
+		<button>
 			<a href="https://majoo44.github.io/EIA2/Aufgabe02/index.html" target="_blank">Aufgabe 2 Code, 02.05.2020</a>
 		</button>
 		<button>
