--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -84,7 +84,7 @@
 			<a href="https://majoo44.github.io/EIA2/Aufgabe03/index.html" target="_blank">Aufgabe 3 Code, 09.05.2020</a>
 		</button>
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Aufgabe03/img/"
+			<a href="https://majoo44.github.io/EIA2/Aufgabe03/img/aufgabe3_haushaltshilfe_UCD_UI_AD.pdf"
 				target="_blank">Aufgabe 3 PDF, 09.05.2020</a>
 		</button>
 		<br>
