--- a/Aufgabe03/index.html
+++ b/Aufgabe03/index.html
@@ -3,7 +3,7 @@ Aufgabe: Aufgabe 3
 Name: Mario Eigeldinger
 Matrikel: 261167
 Datum: 09.05.2020
-Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe.
+Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe...
 -->
 <!DOCTYPE html>
 <html lang="de">
