Aufgabe 4 versucht! AD sehr schweirig...
Bruder muss los.

--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -81,6 +81,14 @@
 		</h2>
 		<h6><a href="https://github.com/Majoo44/EIA2" target="_blank">Repository</a></h6>
 		<button>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe04/index.html" target="_blank">Aufgabe 4 Code, 16.05.2020</a>
+		</button>
+		<button>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe04/img/aufgabe4_data_UCD_DS_UI_AD.pdf"
+				target="_blank">Aufgabe 4 PDF, 16.05.2020</a>
+		</button>
+		<br>
+		<button>
 			<a href="https://majoo44.github.io/EIA2/Aufgabe03/index.html" target="_blank">Aufgabe 3 Code, 09.05.2020</a>
 		</button>
 		<button>
