--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -81,7 +81,15 @@
 		</h2>
 		<h6><a href="https://github.com/Majoo44/EIA2" target="_blank">Repository</a></h6>
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Aufgabe04/index.html" target="_blank">Aufgabe 4 Code, 16.05.2020</a>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe05/index.html" target="_blank">Aufgabe 5 Platzhalter</a>
+		</button>
+		<button>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe04/img/aufgabe5"
+				target="_blank">Aufgabe 5 PDF, 23.05.2020</a>
+		</button>
+		<br>
+		<button>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe04/index.html" target="_blank">Aufgabe 5 Platzhalter</a>
 		</button>
 		<button>
 			<a href="https://majoo44.github.io/EIA2/Aufgabe04/img/aufgabe4_data_UCD_DS_UI_AD.pdf"
