Aufgabe 5 versucht... Konzept vollständig

--- a/Aufgabe05/index.html
+++ b/Aufgabe05/index.html
@@ -11,7 +11,7 @@ Durch diese Hilfe konnte ich einige Dinge verstehen.
 
 <head>
     <meta charset="UTF-8">
-    <title>Aufgabe 4 - Mario Eigeldinger</title>
+    <title>Aufgabe 5 - Mario Eigeldinger</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <header>
@@ -69,7 +69,7 @@ Durch diese Hilfe konnte ich einige Dinge verstehen.
         <h4>Bestellungsübersicht:</h4>
         <div id="order">
         </div>
-        <button id="button">Kontaktdaten eingeben und Bestellung abschließen</button>
+        <button id="button">Bestellung abschicken</button>
     </div>
 
 </body>
