--- a/Aufgabe07/index.html
+++ b/Aufgabe07/index.html
@@ -60,8 +60,8 @@ Durch diese Hilfe konnte ich einige Dinge verstehen.
             </div>
 
         </form>
-        <script src="js/L06_Server_Main.js"></script>
-        <script src="js/L06_Server_Data.js"></script>
+        <script src="js/L07_Database_Main.js"></script>
+        <script src="js/L07_Database_Data.js"></script>
 
     </main>
 
