--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -81,6 +81,14 @@
 		</h2>
 		<h6><a href="https://github.com/Majoo44/EIA2" target="_blank">Repository</a></h6>
 		<button>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe07/index.html" target="_blank">Aufgabe 7 Code, 06.06.2020</a>
+		</button>
+		<button>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe07/img/"
+				target="_blank">Aufgabe 7 PDF, 06.06.2020</a>
+		</button>
+		<br>
+		<button>
 			<a href="https://majoo44.github.io/EIA2/Aufgabe06/index.html" target="_blank">Aufgabe 6 Code, 30.05.2020</a>
 		</button>
 		<button>
