Konzept & bisschen Code - MongoDB Installation hat geklappt, bei "Collection" hängts

--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -84,7 +84,7 @@
 			<a href="https://majoo44.github.io/EIA2/Aufgabe07/index.html" target="_blank">Aufgabe 7 Code, 06.06.2020</a>
 		</button>
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Aufgabe07/img/"
+			<a href="https://majoo44.github.io/EIA2/Aufgabe07/img/aufgabe7_database_UCD_UI_AD.pdf"
 				target="_blank">Aufgabe 7 PDF, 06.06.2020</a>
 		</button>
 		<br>
