--- a/Aufgabe08/index.html
+++ b/Aufgabe08/index.html
@@ -15,7 +15,7 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe...
 </head>
 <body> 
 <main>
-<canvas>
+<canvas id="canvas">
     
 </canvas>
 
