--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -84,7 +84,7 @@
 			<a href="https://majoo44.github.io/EIA2/Aufgabe08/index.html" target="_blank">Aufgabe 8 Code, 13.06.2020</a>
 		</button>
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Aufgabe08/img/"
+			<a href="https://majoo44.github.io/EIA2/Aufgabe08/img/aufgabe8_canvas_scribble+AD.pdf"
 				target="_blank">Aufgabe 8 PDF, 13.06.2020</a>
 		</button>
 		<hr>
