--- a/Aufgabe08/index.html
+++ b/Aufgabe08/index.html
@@ -10,17 +10,14 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe...
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aufgabe 8 - Mario Eigeldinger</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body> 
-<main>
-<canvas id="canvas">
-    
-</canvas>
+<canvas id="canvas" width="1080", height="2280"></canvas>
 
 <script src="js/L08_Main.js"></script>
-</main>
 
 </body>
 </html>
