--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -84,7 +84,7 @@
 			<a href="https://majoo44.github.io/EIA2/Aufgabe09/index.html" target="_blank">Aufgabe 9 Code, 20.06.2020</a>
 		</button>
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Aufgabe08/img/"
+			<a href="https://majoo44.github.io/EIA2/Aufgabe09/img/aufgabe9_canvasclasses_Klassendiagramm+AD.pdf"
 				target="_blank">Aufgabe 9 PDF, 20.06.2020</a>
 		</button>
 		<br>
