--- a/Aufgabe09/index.html
+++ b/Aufgabe09/index.html
@@ -18,6 +18,9 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe...
 <canvas id="canvas" width="1080", height="2280"></canvas>
 
 <script src="js/L09_Main.js"></script>
+<script src="js/Partikel.js"></script>
+<script src="js/Vector.js"></script>
+
 
 </body>
 </html>
