Steckbrief Update Aufgabe 10

--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -81,6 +81,14 @@
 		</h2>
 		<h6><a href="https://github.com/Majoo44/EIA2" target="_blank">Repository</a></h6>
 		<button>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe10/index.html" target="_blank">Aufgabe 10 Code, 27.06.2020</a>
+		</button>
+		<button>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe10/img/"
+				target="_blank">Aufgabe 10 PDF, 27.06.2020</a>
+		</button>
+		<br>
+		<button>
 			<a href="https://majoo44.github.io/EIA2/Aufgabe09/index.html" target="_blank">Aufgabe 9 Code, 20.06.2020</a>
 		</button>
 		<button>
