Aufgabe 10 bearbeitet - mit eigenen Klassen & Responsive

--- a/Aufgabe10/index.html
+++ b/Aufgabe10/index.html
@@ -15,15 +15,16 @@ Hiermit versichere ich, dass ich diesen Code selbst geschrieben habe...
     <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body> 
-<canvas id="canvas" width="1080", height="2280"></canvas>
+<canvas id="maincanvas"></canvas></canvas>
 
-<script src="js/L10_Main.js"></script>
-<script src="js/Partikel.js"></script>
-<script src="js/Vector.js"></script>
-
-crc2.putImageData(image, 0, 0);
-crc2.getImageData(0, 0, canvas.width, canvas.height);
-
+<script src="js/Hintergrund/hintergrund.js"></script>
+<script src="js/Zelle (Superklasse)/zelle.js"></script>
+<script src="js/Vektor/vektor.js"></script>
+<script src="js/Killerzellen/killerzelle.js"></script>
+<script src="js/Coronazellen/coronazelle.js"></script>
+<script src="js/Koerperzelle/koerperzelle.js"></script>
+<script src="js/Partikel/partikel.js"></script>
+<script src="js/Main/main.js"></script>
 
 </body>
 </html>
