--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -84,7 +84,7 @@
 			<a href="https://majoo44.github.io/EIA2/Aufgabe10/index.html" target="_blank">Aufgabe 10 Code, 27.06.2020</a>
 		</button>
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Aufgabe10/img/"
+			<a href="https://majoo44.github.io/EIA2/Aufgabe10/img/aufgabe10_virusinheritance_scribble+AD.pdf"
 				target="_blank">Aufgabe 10 PDF, 27.06.2020</a>
 		</button>
 		<br>
