--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -81,10 +81,10 @@
 		</h2>
 		<h6><a href="https://github.com/Majoo44/EIA2" target="_blank">Repository</a></h6>
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Aufgabe10/index.html" target="_blank">Aufgabe 11 Code, 03.07.2020</a>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe11/index.html" target="_blank">Aufgabe 11 Code, 03.07.2020</a>
 		</button>
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Aufgabe10/img/aufgabe10_virusinheritance_scribble+AD.pdf"
+			<a href="https://majoo44.github.io/EIA2/Aufgabe11/img/"
 				target="_blank">Aufgabe 11 PDF, 03.07.2020</a>
 		</button>
 		<br>
