--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -84,7 +84,7 @@
 			<a href="https://majoo44.github.io/EIA2/Aufgabe11/index.html" target="_blank">Aufgabe 11 Code, 03.07.2020</a>
 		</button>
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Aufgabe11/img/"
+			<a href="https://majoo44.github.io/EIA2/Aufgabe11/img/aufgabe11_virusadvanced_scribble+AD.pdf"
 				target="_blank">Aufgabe 11 PDF, 03.07.2020</a>
 		</button>
 		<br>
