--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -80,6 +80,23 @@
 			Aufgaben:
 		</h2>
 		<h6><a href="https://github.com/Majoo44/EIA2" target="_blank">Repository</a></h6>
+		<h4>
+			Endabgabe:
+		</h4>
+		
+		<button>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe11/index.html" target="_blank">ANWENDUNG</a>
+		</button>
+		<button>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe11/img/aufgabe11_virusadvanced_scribble+AD.pdf"
+				target="_blank">KONZEPT</a>
+		</button>
+		<button>
+			<a href="https://majoo44.github.io/EIA2/Aufgabe11/img/aufgabe11_virusadvanced_scribble+AD.pdf"
+				target="_blank">Endabgabe in GitHub</a>
+		</button>
+		<br>
+
 		<button>
 			<a href="https://majoo44.github.io/EIA2/Aufgabe11/index.html" target="_blank">Aufgabe 11 Code, 03.07.2020</a>
 		</button>
