Server.ts anpassen

--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -83,20 +83,23 @@
 		<h4>
 			Endabgabe:
 		</h4>
-		
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Aufgabe11/index.html" target="_blank">ANWENDUNG</a>
+			<a href="https://majoo44.github.io/EIA2/Endabgabe/endabgabe.html" target="_blank">ANWENDUNG</a>
 		</button>
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Aufgabe11/img/aufgabe11_virusadvanced_scribble+AD.pdf"
-				target="_blank">KONZEPT</a>
+			<a href="https://github.com/Majoo44/EIA2/tree/master/Endabgabe" target="_blank">Endabgabe in GitHub</a>
 		</button>
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Aufgabe11/img/aufgabe11_virusadvanced_scribble+AD.pdf"
-				target="_blank">Endabgabe in GitHub</a>
+			<a href="https://majoo44.github.io/EIA2/Endabgabe/Konzeption/designdokument_eia2_endbgabeSoSe.pdf"
+				target="_blank">KONZEPT</a> 
+		</button>
+		<p>Die PDF des Buttons "Konzept" beinhaltet das Designdokument sowie alle Anleitungen.</p>
+		<button>
+			<a href="https://majoo44.github.io/EIA2/Endabgabe/"
+				target="_blank">ZIP-Datei</a> 
 		</button>
 		<br>
-
+		<hr>
 		<button>
 			<a href="https://majoo44.github.io/EIA2/Aufgabe11/index.html" target="_blank">Aufgabe 11 Code, 03.07.2020</a>
 		</button>
