Is this Final? :)

--- a/Endabgabe/endabgabe.html
+++ b/Endabgabe/endabgabe.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- 
+Aufgabe: Endabgabe
+Name: Mario Eigeldinger
+Matrikel: 261167
+Datum: 04.08.2020
+Wichtige Info: Der Typescript Code basiert auf dem der Endabgabe von Alida Kohler aus dem aktuellen Kurs. Durch die "Inspirierung" konnte ich einige Dinge verstehen, hinzufügen, entfernen, anders implementieren sowie die Endabgabe final abgeben.
+-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +24,6 @@
     <link rel="icon" href="Konzept/zwiezauberbild.png" type="image/x-icon">
     
 </head>
-
 <body>
     <canvas></canvas>
     <img id="zauberbild" src="Konzept//zauberbild.png">
@@ -56,12 +61,9 @@
             <datalist id="drawings">
             </datalist>
         </span>
-    </form>
-    
+    </form> 
     <div id="allForms">
         <span>All Forms are listed here!</span>
     </div>
-
 </body>
-
 </html>
