--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -90,13 +90,12 @@
 			<a href="https://github.com/Majoo44/EIA2/tree/master/Endabgabe" target="_blank">Endabgabe in GitHub</a>
 		</button>
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Endabgabe/Konzeption/designdokument_eia2_endbgabeSoSe.pdf"
+			<a href="https://majoo44.github.io/EIA2/Endabgabe/Konzept/designdokument_eia2_endbgabeSoSe.pdf"
 				target="_blank">KONZEPT</a> 
 		</button>
 		<p>Die PDF des Buttons "Konzept" beinhaltet das Designdokument sowie alle Anleitungen.</p>
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Endabgabe/"
-				target="_blank">ZIP-Datei</a> 
+			<a href="https://majoo44.github.io/EIA2/Endabgabe/ZIP_Endabgabe_EIA2.zip"	target="_blank">ZIP-Datei</a> 
 		</button>
 		<br>
 		<hr>
