--- a/steckbrief/steckbrief.htm
+++ b/steckbrief/steckbrief.htm
@@ -95,7 +95,7 @@
 		</button>
 		<p>Die PDF des Buttons "Konzept" beinhaltet das Designdokument sowie alle Anleitungen.</p>
 		<button>
-			<a href="https://majoo44.github.io/EIA2/Endabgabe/ZIP_Endabgabe_EIA2.zip"	target="_blank">ZIP-Datei</a> 
+			<a href="https://github.com/Majoo44/EIA2/blob/master/Endabgabe/ZIP_Endabgabe_EIA2.zip "target="_blank">ZIP-Datei</a> 
 		</button>
 		<br>
 		<hr>
